--- a/style.css
+++ b/style.css
@@ -1028,7 +1028,11 @@ form .btn2{
   .home-section img {
     margin-bottom: 10px;
     max-width: 150px;
+    top:-20px
+    position: relative;
   }
+}
+
 
   .home-intro {
     margin-top: 0;
@@ -1044,6 +1048,7 @@ form .btn2{
     margin-left: 25px; /* ensures margin auto works */
   }
 }
+
 
 
 
