--- a/style.css
+++ b/style.css
@@ -1020,6 +1020,20 @@ form .btn2{
     margin-left: 25px; /* ensures margin auto works */
   }
 }
+@media only screen and (max-width: 768px) {
+  .myimg {
+    margin-top: -20px; /* move image up */
+    margin-bottom: 5px; /* small bottom margin */
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .header-text {
+    margin-top: 15%; /* reduce big top margin on intro text */
+    text-align: center;
+  }
+}
+
 
 
 
